Fix: Cursor missing in omnibox after entering a alphabet in NTP 'Search box'

After any alphabet is entered in 'Search box',  Textfield::DoInsertChar is
called and it first updates the cursor visibility by calling UpdateAfterChange
then it calls OnAfterUserAction to update the textfield focus and which may
change the cursor visibility. If the cursor visibility is changed in
OnAfterUserAction, the text cursor will not being updated again. The previous
CL (https://codereview.chromium.org/2728433002/) exposed this wrong order of
updating.

TEST=TextfieldTest.CursorVisibilityChangeAfterInserting

BUG=698172

Review-Url: https://codereview.chromium.org/2729133005
Cr-Commit-Position: refs/heads/master@{#456444}

Former-commit-id: c57eaf40e82246d8acb9f58a350ef1a619cb19b1